--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Gregory Manzhur",
   "license": "MIT",
   "scripts": {
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006",
+    "check-types": "tsc"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -21,6 +22,7 @@
     "@types/color": "^3.0.0",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
+    "@types/react-icons": "^3.0.0",
     "@types/storybook__addon-knobs": "^5.0.0",
     "@types/storybook__react": "^4.0.1",
     "babel-loader": "^8.0.5",
@@ -34,6 +36,7 @@
     "color": "^3.1.1",
     "emotion-theming": "^10.0.10",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-icons": "^3.6.1"
   }
 }
