--- a/package.json
+++ b/package.json
@@ -10,12 +10,6 @@
     "check-types": "tsc"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
     "@storybook/addon-info": "^5.0.11",
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/react": "^5.0.11",
@@ -25,8 +19,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/storybook__addon-knobs": "^5.0.0",
     "@types/storybook__react": "^4.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-emotion": "^10.0.9",
+    "awesome-typescript-loader": "^5.2.1",
     "react-docgen-typescript-loader": "^3.1.0",
     "typescript": "^3.4.5"
   },
