--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
     "@types/react-icons": "^3.0.0",
+    "@types/react-text-mask": "^5.4.4",
     "@types/storybook__addon-knobs": "^5.0.0",
     "@types/storybook__react": "^4.0.1",
     "awesome-typescript-loader": "^5.2.1",
@@ -30,6 +31,7 @@
     "emotion-theming": "^10.0.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-icons": "^3.6.1"
+    "react-icons": "^3.6.1",
+    "react-text-mask": "^5.4.3"
   }
 }
