Add text field wrappers: date field

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
-    "react-text-mask": "^5.4.3"
+    "react-text-mask": "^5.4.3",
+    "text-mask-addons": "^3.8.0"
   }
 }
